--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&display=swap');
 @import "tailwindcss";
@@ -8,14 +7,12 @@ body {
   letter-spacing: 0.2px;
   
 }
+.type{
+  font-size: large;
+}
 .custom-font {
   font-family: 'Dancing Script', cursive; /* Custom font for specific elements */
 }
-=======
-@import "tailwindcss";
-
-
->>>>>>> 76d3b264a04957ffae163e64bbb3b5d6d68fc353
 @keyframes marquee {
     0% {
       transform: translateX(0%);
